--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/SampoPaukkonen/osa3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "mongoose": "^5.5.11",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
-  } 
+  }
 }
